<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tiv.ocpapp.ui.StartFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view"
        android:layout_width="@dimen/question_number_width"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
      android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/question_number"
            android:layout_width="@dimen/question_number_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_question_number"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/arrow_btn"
        android:layout_width="@dimen/enter_btn_dimen"
        android:layout_height="@dimen/enter_btn_dimen"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_lime_green_24dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapters"
        android:layout_below="@+id/arrow_btn"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
